--- a/index.html
+++ b/index.html
@@ -6,71 +6,79 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Studio</title>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
   <header>
-    <a href="">WEBSTUDIO</a>
+    <a href="./index.html" class="link logo"><span class="accent">WEB</span>STUDIO</a>
 
-    <nav>
-      <ul>
+    <nav class="site-nav">
+      <ul class="list">
         <li>
-          <a href="">Studio</a>
+          <a href="./index.html" class="link">Studio</a>
         </li>
         <li>
-          <a href="">Portfolio</a>
+          <a href="./portfolio.html" class="link">Portfolio</a>
         </li>
         <li>
-          <a href="">Contacts</a>
+          <a href="./contacts.html" class="link">Contacts</a>
         </li>
       </ul>
     </nav>
 
-    <ul>
+    <ul class="list contacts-nav">
       <li>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
       </li>
       <li>
-        <a href="tel:110001111111">+11 (000) 111-11-11</a>
+        <a href="tel:110001111111" class="link">+11 (000) 111-11-11</a>
       </li>
     </ul>
   </header>
 
   <main>
     <!-- Hero section -->
-    <section>
-      <h1>Effective Solutions <br>for Your Business</h1>
-      <button type="button">Order Service</button>
+    <section class="hero">
+      <h1 class="title">Effective Solutions for Your Business</h1>
+      <button type="button" class="btn btn-hero">Order Service</button>
     </section>
 
     <!-- Skills section -->
-    <section>
-      <h2>Company skills</h2>
+    <section class="section">
+      <h2 class="title">Company skills</h2>
 
-      <ul>
+      <ul class="list">
         <li>
-          <h3>Strategy</h3>
+          <h3 class="subtitle">Strategy</h3>
           <p>
             Our goal is to identify the business problem to walk away with the perfect and
             creative solution.
           </p>
         </li>
         <li>
-          <h3>Punctuality</h3>
+          <h3 class="subtitle">Punctuality</h3>
           <p>
             Bring the key message to the brand's audience for the best price within the shortest
             possible time.
           </p>
         </li>
         <li>
-          <h3>Diligence</h3>
+          <h3 class="subtitle">Diligence</h3>
           <p>
             Research and confirm brands that present the strongest digital growth opportunities
             and minimize risk.
           </p>
         </li>
         <li>
-          <h3>Technologies</h3>
+          <h3 class="subtitle">Technologies</h3>
           <p>
             Design practice focused on digital experiences. We bring forth a deep passion for
             problem-solving.
@@ -80,54 +88,60 @@
     </section>
 
     <!-- weDoing section -->
-    <section>
-      <h2>What are we doing</h2>
-      <ul>
+    <section class="section">
+      <h2 class="title">What are we doing</h2>
+      <ul class="list">
         <li>
-          <img src="./images/img01.jpg" alt="Desktop app" width="360" height="300">
+          <a href="" class="link">
+            <img src="./images/img01.jpg" alt="Desktop app" width="360" height="300">
+          </a>
         </li>
         <li>
-          <img src="./images/img02.jpg" alt="Mobile app" width="360" height="300">
+          <a href="" class="link">
+            <img src="./images/img02.jpg" alt="Mobile app" width="360" height="300">
+          </a>
         </li>
         <li>
-          <img src="./images/img03.jpg" alt="Synchronization between devices" width="360" height="300">
+          <a href="" class="link">
+            <img src="./images/img03.jpg" alt="Synchronization between devices" width="360" height="300">
+          </a>
         </li>
       </ul>
     </section>
 
     <!-- Team section -->
-    <section>
-      <h2>Our Team</h2>
-      <ul>
+    <section class="section team">
+      <h2 class="title">Our Team</h2>
+      <ul class="list">
         <li>
           <img src="./images/ava01.jpg" alt="Mark Guerrero" width="264" height="260">
-          <h3>Mark Guerrero</h3>
+          <h3 class="subtitle">Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
         <li>
           <img src="./images/ava02.jpg" alt="Tom Ford" width="264" height="260">
-          <h3>Tom Ford</h3>
+          <h3 class="subtitle">Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
           <img src="./images/ava03.jpg" alt="Camila Garcia" width="264" height="260">
-          <h3>Camila Garcia</h3>
+          <h3 class="subtitle">Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li>
           <img src="./images/ava04.jpg" alt="Daniel Wilson" width="264" height="260">
-          <h3>Daniel Wilson</h3>
+          <h3 class="subtitle">Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
       </ul>
     </section>
   </main>
 
-  <footer>
-    <a href="">WEBSTUDIO</a>
+  <footer class="footer-wrap">
+    <a href="./index.html" class="link logo"><span class="accent">WEB</span>STUDIO</a>
     <p>
-      Increase the flow of customers and <br>sales for your business with digital
-      <br>marketing & growth solutions.
+      Increase the flow of customers and sales for your business with digital marketing & growth
+      solutions.
     </p>
   </footer>
 </body>
