--- a/portfolio.html
+++ b/portfolio.html
@@ -47,13 +47,14 @@
   <main>
     <section class="section">
       <h1 class="title">Portfolio</h1>
-      <div>
-        <button type="button" class="btn">All</button>
-        <button type="button" class="btn">Web Site</button>
-        <button type="button" class="btn">App</button>
-        <button type="button" class="btn">Design</button>
-        <button type="button" class="btn">Marketing</button>
-      </div>
+      
+      <ul class="list">
+        <li><button type="button" class="btn">All</button></li>
+        <li><button type="button" class="btn">Web Site</button></li>
+        <li><button type="button" class="btn">App</button></li>
+        <li><button type="button" class="btn">Design</button></li>
+        <li><button type="button" class="btn">Marketing</button></li>
+      </ul>
 
       <ul class="list">
         <li>
